--- a/src/app/pages/map/components/resolve-task/resolve-task.component.html
+++ b/src/app/pages/map/components/resolve-task/resolve-task.component.html
@@ -14,7 +14,7 @@
     </ng-container>
   </div>
   <div class="buttons">
-    <button class="btn" (click)="dismiss()">закрыть</button>
+    <button class="btn">закрыть</button>
     <button class="btn btn_active" (click)="accept()">
       {{ type === "endAll" ? "Завершить всё" : "Выполнить" }}
     </button>
