--- a/src/app/pages/tabs/pages/tabs-ready/tabs-ready.page.html
+++ b/src/app/pages/tabs/pages/tabs-ready/tabs-ready.page.html
@@ -17,6 +17,10 @@
     </div>
   </app-header>
   <div class="shadow shadow_top"></div>
+  <div
+    class="shadow shadow_bottom"
+    *ngIf="(tabsService.currentTab$ | async) === 1"
+  ></div>
 
   <div class="content" #content>
     <div
