Ладно, еще мелкий фикс в догонку

--- a/src/app/@shared/modals/statistic-modal/statistic-modal.component.html
+++ b/src/app/@shared/modals/statistic-modal/statistic-modal.component.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="statistic-item">
-      <span class="title">3. Установки, <span class="unit"> км</span></span>
+      <span class="title">3. Установки, <span class="unit"> шт</span></span>
       <span class="value">{{
         (userInfo.endStatistic$ | async)?.numberOfProdObjects
         }}</span>
