--- a/src/app/pages/tabs/pages/tabs-tasks/components/tabs-tasks-card/tabs-tasks-card.component.html
+++ b/src/app/pages/tabs/pages/tabs-tasks/components/tabs-tasks-card/tabs-tasks-card.component.html
@@ -18,7 +18,7 @@
           src="assets/Icons/tabs/tasks-tab/tare.svg"
         ></svg-icon>
       </div>
-      <span class="info">Доставить тару – {{ data?.tares.length }} шт</span>
+      <span class="info">Доставить тару – {{ taresCount }} шт</span>
     </div>
     <div class="description__item">
       <div class="icon" [class.icon_active]="false">
@@ -30,7 +30,7 @@
           src="assets/Icons/tabs/tasks-tab/test.svg"
         ></svg-icon>
       </div>
-      <span class="info">Получить пробы – {{ data?.probes.length }} шт</span>
+      <span class="info">Получить пробы – {{ probesCount }} шт</span>
     </div>
   </div>
 </div>
