--- a/src/app/pages/tabs/pages/tabs-ready/components/tabs-ready-item/tabs-ready-item.component.html
+++ b/src/app/pages/tabs/pages/tabs-ready/components/tabs-ready-item/tabs-ready-item.component.html
@@ -15,7 +15,7 @@
     </span>
     <span class="description__item">
       Количество проб:
-      <span class="value">{{ data?.probes.length }}</span>
+      <span class="value">{{ probesCount }}</span>
     </span>
   </div>
 </div>
