--- a/src/app/pages/nfc-verify/nfc-verify.page.html
+++ b/src/app/pages/nfc-verify/nfc-verify.page.html
@@ -22,9 +22,9 @@
       <div class="content-text-block">
         <span class="gray-text">
           Отсканируйте NFC метку для подтверждения выгрузки
-          <span class="light-text">пустой тары ({{(tabsService.currentTask$ | async)?.tares.length}} шт)</span>
+          <span class="light-text">пустой тары ({{taresCount$ | async}} шт)</span>
           <span class="gray-text"> и загрузки </span>
-          <span class="light-text">проб ({{(tabsService.currentTask$ | async)?.probes.length}})</span>
+          <span class="light-text">проб ({{probesCount$ | async}})</span>
         </span>
       </div>
 
