--- a/src/app/pages/map/components/resolve-task/resolve-task.component.scss
+++ b/src/app/pages/map/components/resolve-task/resolve-task.component.scss
@@ -45,8 +45,7 @@ button {
       }
 
       &:first-child {
-        margin-left: sizeWidth(10);
-        margin-right: auto;
+        margin-left: auto;
       }
     }
   }
