feat: map layers

--- a/src/app/pages/map/map.page.scss
+++ b/src/app/pages/map/map.page.scss
@@ -116,6 +116,13 @@
       -webkit-backface-visibility: hidden;
     }
 
+    svg-icon {
+      width: 100%;
+      margin: auto;
+      will-change: transform;
+      -webkit-backface-visibility: hidden;
+    }
+
     .point {
       position: absolute;
       width: 2px;
