--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -15,7 +15,8 @@
     <div [style]="rotationStyle" class="entry-box">
       <div [style]="scaleStyle" class="entry-box">
         <div class="entry-box entry-box__map" [style]="mapStyle">
-          <img src="assets/Icons/map/map{{(theme.isDarkTheme | async) ? '-dark' : '-light'}}.svg"/>
+<!--          <img src="assets/Icons/map/map{{(theme.isDarkTheme | async) ? '-dark' : '-light'}}.svg"/>-->
+          <svg-icon src="assets/Icons/map/{{mapDetail$ | async}}.svg"></svg-icon>
           <div #svg class="svg"></div>
         </div>
       </div>
