--- a/src/app/@shared/modals/status-begin/status-begin.component.html
+++ b/src/app/@shared/modals/status-begin/status-begin.component.html
@@ -7,7 +7,7 @@
       <span class="name">Статус</span>
       <div class="dropdown-container">
         <app-status-dropdown
-          [options]="userInfo.statusList$ | async | statusFilter: 1"
+          [options]="userInfo.statusList$ | async | statusFilter: [1, 4, 5]"
           [currentOptionId]="currentStatusId"
           (onChanged)="changeStatus($event)"
         ></app-status-dropdown>
