--- a/src/app/@shared/status-dropdown/status-dropdown.component.scss
+++ b/src/app/@shared/status-dropdown/status-dropdown.component.scss
@@ -18,6 +18,7 @@ input {
   .indicator {
     height: sizeHeight(40);
     width: sizeHeight(40);
+    min-width: sizeHeight(40);
     margin-right: sizeWidth(11);
 
     display: flex;
@@ -56,7 +57,7 @@ input {
   }
 
   &__menu {
-    max-height: sizeHeight(360);
+    max-height: sizeHeight(170);
     width: 100%;
 
     border: sizeHeight(1) solid var(--border-forms-color);
@@ -89,6 +90,7 @@ input {
 
     &_expanded {
       border: 0px solid var(--border-forms-color);
+      overflow: hidden;
     }
   }
 }
