--- a/src/app/@shared/status-dropdown/status-dropdown.component.scss
+++ b/src/app/@shared/status-dropdown/status-dropdown.component.scss
@@ -3,6 +3,12 @@
   box-sizing: border-box;
 }
 
+span {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 input {
   outline: none;
   border: none;
