delete config.json + status-dropdown disable logic
Конфиг теперь в переменных environment
Нет возможности изменить статус в процессе выполнения задания

--- a/src/app/@shared/avatar-modal/components/user-info/user-info.component.html
+++ b/src/app/@shared/avatar-modal/components/user-info/user-info.component.html
@@ -21,6 +21,7 @@
       <app-status-dropdown
         [options]="userInfo.statusList$ | async | statusFilter: [5]"
         [currentOptionId]="userInfo.statusId$ | async"
+        [disabled]="disableStatusBtn$ | async"
         (onChanged)="changeStatus($event)"
       ></app-status-dropdown>
     </div>
