--- a/src/app/@shared/status-dropdown/status-dropdown.component.html
+++ b/src/app/@shared/status-dropdown/status-dropdown.component.html
@@ -1,7 +1,8 @@
-<div class="dropdown">
+<div class="dropdown" [class.dropdown_disabled]="disabled">
   <input
     (click)="toggleDropdown()"
     (focusout)="closeDropdown()"
+    [disabled]="disabled"
     readonly
     type="text"
     class="dropdown__current"
