--- a/src/app/@shared/modals/status-begin/status-begin.component.html
+++ b/src/app/@shared/modals/status-begin/status-begin.component.html
@@ -9,6 +9,7 @@
         <app-status-dropdown
           [options]="userInfo.statusList$ | async | statusFilter: [1, 4, 5]"
           [currentOptionId]="currentStatusId"
+          [disabled]="disableStatusBtn$ | async"
           (onChanged)="changeStatus($event)"
         ></app-status-dropdown>
       </div>
