--- a/src/app/pages/nfc-verify/components/verify-modal/verify-modal.component.html
+++ b/src/app/pages/nfc-verify/components/verify-modal/verify-modal.component.html
@@ -38,7 +38,7 @@
     <button
       class="btn btn_active"
       (click)="presentNfcTimerModal()"
-      [disabled]="!isValid"
+      [disabled]="(disabled$ | async)"
     >
       подтвердить
     </button>
