btn for redirect to nfc

--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -27,14 +27,14 @@
 
   <div
     class="circle-btn"
-    (click)="redirectToTab()"
+    (click)="redirectToNFC()"
   >
     <svg-icon
       [svgStyle]="{
         'height': '3.9vh',
         'width': '3.9vh'
       }"
-      src="assets/Icons/map/menuBurger.svg"
+      src="assets/Icons/map/tablet_out.svg"
     ></svg-icon>
   </div>
 
