fix extra curr task emitting

--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -27,6 +27,7 @@
 
   <div
     class="circle-btn"
+    [class.circle-btn_disabled]="(tabsService.currentTask$ | async)?.id === null"
     (click)="redirectToNFC()"
   >
     <svg-icon
